DuPont DevSB/src/objects/pse__Proj__c.object
<CustomObject>
    <fields>
        <fullName>pse__Billing_Eligible_Last_Updated__c</fullName>
        <description>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</description>
        <inlineHelpText>When counts of Billing Eligible business records are updated on the Project, this Date field is set to indicate when the data was last captured.</inlineHelpText>
        <label>Billing Eligible Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Milestones that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Milestones that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Milestones</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Misc_Adjustments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Miscellaneous Adjustments that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Miscellaneous Adjustments that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Misc Adjustments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Eligible_Timecard_Splits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Timecard Splits that are currently available for billing event generation.  The maximum number of records you can track is 1999.</description>
        <inlineHelpText>Number of Timecard Splits that are currently available for billing event generation.  The maximum number of records you can track is 1999.</inlineHelpText>
        <label>Billing Eligible Timecard Splits</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Type__c</fullName>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Cost Plus</fullName>
                </value>
                <value>
                    <fullName>T&amp;M Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Value Based</fullName>
                </value>
                <value>
                    <fullName>Performance Based Contract</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Credited_Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period_End_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Current Time Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Current_Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Current Time Period For Projects</relationshipLabel>
        <relationshipName>CurrentTimePeriodForProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Timecard Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, do not include this project when generating billing events</description>
        <label>Exclude From Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Project_Planner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows exclusion of a project from the project planner</description>
        <inlineHelpText>Check to exclude this project from project planner</inlineHelpText>
        <label>Exclude from Project Planner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Expense Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Expense_Notes__c</fullName>
        <label>Expense Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__External_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>External Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hierarchy Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hours_to_Days_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies rules for converting hours to days for timecards against this project</description>
        <inlineHelpText>Specifies rules for converting hours to days for timecards against this project</inlineHelpText>
        <label>Hours to Days Rule</label>
        <referenceTo>pse__Hours_to_Days_Rule__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Inactive_Project_Backlog__c</fullName>
        <description>The amount of backlog (bookings - billings) that was made inactive when the project (and/or sub-projects) became inactive. For parent projects, this is a cumulative value. NOTE: this field is only intended to be updated by PSE.</description>
        <inlineHelpText>The amount of backlog (bookings - billings) that was made inactive when the project (and/or sub-projects) became inactive. For parent projects, this is a cumulative value. NOTE: this field is only intended to be updated by PSE.</inlineHelpText>
        <label>Inactive Project Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Forecasting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this project participate in project forecasting?</description>
        <label>Include In Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Budget__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Internal_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Internal Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this project is billable to a customer.</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Location__c</fullName>
        <label>Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WYOMING</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>BULGARIA</fullName>
                </value>
                <value>
                    <fullName>CAMBODIA</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>CHILE</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>COLOMBIA</fullName>
                </value>
                <value>
                    <fullName>COSTA RICA</fullName>
                </value>
                <value>
                    <fullName>CZECH REPUB</fullName>
                </value>
                <value>
                    <fullName>DENMARK</fullName>
                </value>
                <value>
                    <fullName>DOMINICAN RE</fullName>
                </value>
                <value>
                    <fullName>ECUADOR</fullName>
                </value>
                <value>
                    <fullName>EGYPT</fullName>
                </value>
                <value>
                    <fullName>EL SALVADOR</fullName>
                </value>
                <value>
                    <fullName>FINLAND</fullName>
                </value>
                <value>
                    <fullName>FRANCE</fullName>
                </value>
                <value>
                    <fullName>GERMAN FED R</fullName>
                </value>
                <value>
                    <fullName>GHANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Margin__c</fullName>
        <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Master_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Master Project For Sub-Projects:</relationshipLabel>
        <relationshipName>MasterProjectForSubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_External_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (External)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Internal_Hours__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Non-Billable Hours (Internal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <description>Staffing project notes</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Other_Costs__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Immediate Sub-Projects</relationshipLabel>
        <relationshipName>ImmediateSubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pass_Through_Billings__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pass-Through Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <inlineHelpText>The number of hours planned for this project</inlineHelpText>
        <label>Planned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Bill_Type__c</fullName>
        <label>Pre-Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Pre_Billed__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Pre-Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Project_ID_Chain__c</fullName>
        <label>Project ID Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_ID__c</fullName>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person responsible for this project (optional). If not provided, it&apos;s assumed that the record Owner is the project manager.</description>
        <label>Project Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects Managed</relationshipLabel>
        <relationshipName>ProjectsManaged</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Name_Chain__c</fullName>
        <label>Project Name Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Phase__c</fullName>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Status_Notes__c</fullName>
        <label>Project Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Type__c</fullName>
        <description>A descriptive classification of the project</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absence</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Business Development (Intl Proj)</fullName>
                </value>
                <value>
                    <fullName>Business Improvements (Intl Proj)</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Content Development (Intl Proj)</fullName>
                </value>
                <value>
                    <fullName>Customer Project</fullName>
                    <default>true</default>
                    <label>Customer Project</label>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - ILT Project</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Implementation &amp; Delivery</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production Project – Customer</fullName>
                </value>
                <value>
                    <fullName>L&amp;D - Production Project – Internal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Professional Development (Intl Proj)</fullName>
                </value>
                <value>
                    <fullName>Running the firm (Intl Proj)</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Travel - Non Project Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Discount_Limit__c</fullName>
        <description>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</description>
        <inlineHelpText>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</inlineHelpText>
        <label>Rate Card Discount Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Percentage_Discount__c</fullName>
        <description>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</description>
        <inlineHelpText>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</inlineHelpText>
        <label>Rate Card Percentage Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</description>
        <inlineHelpText>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</inlineHelpText>
        <label>Rate Card Set</label>
        <referenceTo>pse__Rate_Card_Set__c</referenceTo>
        <relationshipLabel>Rate Card Set Projects</relationshipLabel>
        <relationshipName>Rate_Card_Set_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Requires_Dependency_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Dependency Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_Calculated_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scheduled Backlog Calculated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_End_Date__c</fullName>
        <label>Scheduled Backlog End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestone__c</fullName>
        <label>Scheduled Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Share_with_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, sharing rules are created for this record and its children so that the user designated as Project Manager has access to them.</description>
        <label>Share with Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Share_with_Project_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to share certain project related objects like Milestones with resources that are assigned to the project</inlineHelpText>
        <label>Share with Project Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Project - Active</fullName>
                </value>
                <value>
                    <fullName>Project - Closed</fullName>
                </value>
                <value>
                    <fullName>Project - Draft</fullName>
                    <default>true</default>
                    <label>Project - Draft</label>
                </value>
                <value>
                    <fullName>Project - Management Approved</fullName>
                </value>
                <value>
                    <fullName>Project - Legal / Credit Approved</fullName>
                </value>
                <value>
                    <fullName>Project - Revenue at Risk</fullName>
                </value>
                <value>
                    <fullName>Project - Client Signed</fullName>
                </value>
                <value>
                    <fullName>Project - Completed</fullName>
                </value>
                <value>
                    <fullName>Project - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Tasks_Total_Percent_Complete_Points__c</fullName>
        <formula>IF (pse__Tasks_Total_Points__c=0, 0, pse__Tasks_Total_Points_Complete__c/pse__Tasks_Total_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tasks Total Percent Complete (Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Tasks_Total_Points_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of task points complete. This field is system generated.</inlineHelpText>
        <label>Tasks Total Points Complete</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tasks_Total_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of all points for project tasks</inlineHelpText>
        <label>Tasks Total Points</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable projects for which consulting time is credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable projects for which consulting time is credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable projects for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable projects for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Total_Assigned_Hours__c</fullName>
        <label>Total Assigned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of project tasks. This value is system generated.</inlineHelpText>
        <label>Total Number of Tasks</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Projected_Revenue_From_Assignments__c</fullName>
        <label>Total Projected Revenue From Assignments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>